Fixes the title blur not covering the entire title

--- a/client/post-editor/editor-title/style.scss
+++ b/client/post-editor/editor-title/style.scss
@@ -33,6 +33,7 @@
 
 .editor-title__input[type="text"] {
 	margin-left: 16px;
+	padding-right: 16px;
 	border: none;
 	font-family: $serif;
 	font-size: 28px;
